--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
          <a href="https://www.google.com/maps/place/Jain+Kalyana+Mantapa/@14.3137717,76.6495045,17z/data=!3m1!4b1!4m6!3m5!1s0x3bb0bd2a5b3fe611:0x6fa56fcfb19d698f!8m2!3d14.3137665!4d76.6520794!16s%2Fg%2F11fp8t_f51?entry=ttu" target="_blank">
             <div class="venue">SEE THE VENUE</div>
          </a>
-         <a href="poster.html" target="_blank">
+         <a href="invitation/invitation.png" target="_blank">
             <div class="venue">VIEW INVITATION POSTER</div>
          </a>
       </div>
