--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <meta property="og:title" content="Wedding Invitation | Guru Raghavendra & Pooja | Feb 19-20, 2026" />
       <meta property="og:description"
          content="Join us in celebrating the wedding of Guru Raghavendra R & Pooja S at Jain Kalyana Mantapa, Challakere. Reception: 19 Feb 7PM | Muhurat: 20 Feb 9:45 AM" />
-      <meta property="og:image" content="./assets/img/logo.png" />
+      <meta property="og:image" content="./assets/img/logo.jpeg" />
       <meta property="og:url" content="" />
       <meta property="og:site_name" content="Wedding Invitation | Guru Raghavendra & Pooja" />
       <meta name="twitter:card" content="website">
